# decomp-learn

./: .gitignore  AGENTS.md  PROJECT.md  analyze_contact.py  analyze_plugcharger.py  augment_contact.py  collect_demos.py  commands.sh  convert_augmented_to_lerobot.py  convert_h5_to_lerobot.py  eval_lerobot.py  eval_lerobot_v2.py  fix_lerobot_dataset.py  plan_01_current_project.docx  pyproject.toml  replay.sh  replay_demos.py  resume_baseline_996.sh  run_augmented_contact.sh  run_baseline.py  run_baseline.sh  run_baseline_996.sh  run_baseline_delta_800.sh  run_baseline_delta_996.sh  status.sh  train_lerobot.py  train_lerobot_v2.py  visualize_policy.py
baseline/diffusion/v1/: eval.py  train.py  train_default.py
baseline/diffusion/v2/: commands.sh  convert.py  eval.py  train.py
baseline/diffusion/v3/: commands.sh
decomp/v1/: commands.sh  eval.py  eval_curve.sh  motion_planner.py  sweep.sh  train.py  viz_failures.py
docs/superpowers/specs/: 2026-05-10-blog-design.md
